--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <table cellspacing="20">
         <tr>
-            <td><img src="C:\Users\Ayush\Desktop\html\Ayush Parakh.png" width="200" height="200" /></td>
+            <td><img src="Ayush Parakh.png" width="200" height="200" /></td>
             <td>
                 <h1>Ayush parakh</h1>
                 <p> <em>studying at vellore institute of technologhy</em> </p>
